Designing the layout of body, header and navbar. Giving bgColor, margin (gutter), and height to HEADER and NAVBAR. Using GUTTER (margin: 10px;) to separate the elements (divs)

--- a/Layouts.html
+++ b/Layouts.html
@@ -8,5 +8,12 @@
      <link rel="stylesheet" href="Layouts.css">
 </head>
 <body>
+     <div id="header">
+
+     </div>
+
+     <div id="navbar">
+          
+     </div>
 </body>
 </html>
