Designing the layout of the main section. Giving bgColor, margin, padding, font-size. Also designing the h1 with font-size and color

--- a/Layouts.html
+++ b/Layouts.html
@@ -13,7 +13,22 @@
      </div>
 
      <div id="navbar">
-          
+
      </div>
+
+     <div class="main">
+          <h1>DragonEMPEROR: The legend</h1>
+               <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore, velit amet ullam maxime quidem nesciunt alias laborum minima rerum explicabo nulla ex ea magnam similique debitis! Numquam ipsa impedit expedita.
+               </p>
+               <h1>SilvenLEAF: The village of souls</h1>
+                    <p>
+                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore, velit amet ullam maxime quidem nesciunt alias laborum minima rerum explicabo nulla ex ea magnam similique debitis! Numquam ipsa impedit expedita.
+                    </p>
+                    <p>
+                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque rerum quam, ex molestiae totam, distinctio minima magni repudiandae animi nam quidem iste enim id eius quia aut cupiditate quos, porro.
+                    </p>
+     </div>
+
 </body>
 </html>
