Adding a SIDE-RIGHT (SIDE-BAR)

--- a/Layouts.html
+++ b/Layouts.html
@@ -16,6 +16,16 @@
 
      </div>
 
+
+     <div class="side-right">
+          <h2>Lecture Dates</h2>
+          <p>11/07 -Lecture on Caesar</p>
+          <p>11/14 -Lecture on Caesar</p>
+          <p>11/21 -Lecture on Caesar</p>
+          <p>11/28 -Lecture on Caesar</p>
+          <p>12/05 -Lecture on Caesar</p>
+     </div>
+
      <div class="main">
           <h1>DragonEMPEROR: The legend</h1>
                <p>
