Added another SIDEBAR. Total 2 SIDE-BARS

--- a/Layouts.html
+++ b/Layouts.html
@@ -26,6 +26,21 @@
           <p>12/05 -Lecture on Caesar</p>
      </div>
 
+<!-- ***************
+      SIDE-BAR NO 2
+**************** -->
+          <div class="side-right">
+               <h2>Lecture Dates 2</h2>
+               <p>11/07 -Lecture on Caesar</p>
+               <p>11/14 -Lecture on Caesar</p>
+               <p>11/21 -Lecture on Caesar</p>
+               <p>11/28 -Lecture on Caesar</p>
+               <p>12/05 -Lecture on Caesar</p>
+          </div>
+<!-- We have to place the second SIDEBAR
+under the first one but above the main content -->
+
+
      <div class="main">
           <h1>DragonEMPEROR: The legend</h1>
                <p>
@@ -38,6 +53,23 @@
                     <p>
                          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque rerum quam, ex molestiae totam, distinctio minima magni repudiandae animi nam quidem iste enim id eius quia aut cupiditate quos, porro.
                     </p>
+     </div>
+
+     <div class="main">
+          <h1>Sailing onto the unknown</h1>
+               <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore, velit amet ullam maxime quidem nesciunt alias laborum minima rerum explicabo nulla ex ea magnam similique debitis! Numquam ipsa impedit expedita.
+               </p>
+               <h1>Deai: The meeting of fate</h1>
+                    <p>
+                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore, velit amet ullam maxime quidem nesciunt alias laborum minima rerum explicabo nulla ex ea magnam similique debitis! Numquam ipsa impedit expedita.
+                    </p>
+                    <p>
+                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque rerum quam, ex molestiae totam, distinctio minima magni repudiandae animi nam quidem iste enim id eius quia aut cupiditate quos, porro.
+                    </p>
+
+                    <h1>Goliath: The forbidden battle</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
      </div>
 
 </body>
