Added an IMAGE-SIDEBAR. Total SIDE-BARS=3

--- a/Layouts.html
+++ b/Layouts.html
@@ -29,17 +29,24 @@
 <!-- ***************
       SIDE-BAR NO 2
 **************** -->
-          <div class="side-right">
-               <h2>Lecture Dates 2</h2>
-               <p>11/07 -Lecture on Caesar</p>
-               <p>11/14 -Lecture on Caesar</p>
-               <p>11/21 -Lecture on Caesar</p>
-               <p>11/28 -Lecture on Caesar</p>
-               <p>12/05 -Lecture on Caesar</p>
-          </div>
+     <div class="side-right">
+          <h2>Lecture Dates 2</h2>
+          <p>11/07 -Lecture on Caesar</p>
+          <p>11/14 -Lecture on Caesar</p>
+          <p>11/21 -Lecture on Caesar</p>
+          <p>11/28 -Lecture on Caesar</p>
+          <p>12/05 -Lecture on Caesar</p>
+     </div>
 <!-- We have to place the second SIDEBAR
 under the first one but above the main content -->
 
+<!-- *****************
+ IMAGE as a SIDE-BAR
+****************** -->
+     <div>
+          <img class="image-sidebar" src="https://dl.dropbox.com/s/xjxwp9uzz4gwswz/Mobile-wall.jpg?dl=1" alt="">
+          <!-- Here class is in the  -->
+     </div>
 
      <div class="main">
           <h1>DragonEMPEROR: The legend</h1>
