Added IMAGE-SIDEBAR Hover Effect.

--- a/Layouts.html
+++ b/Layouts.html
@@ -45,7 +45,7 @@ under the first one but above the main content -->
 ****************** -->
      <div>
           <img class="image-sidebar" src="https://dl.dropbox.com/s/xjxwp9uzz4gwswz/Mobile-wall.jpg?dl=1" alt="">
-          <!-- Here class is in the  -->
+          <!-- Here class is in the IMG -->
      </div>
 
      <div class="main">
