--- a/Layouts.html
+++ b/Layouts.html
@@ -8,6 +8,9 @@
      <link rel="stylesheet" href="Layouts.css">
 </head>
 <body>
+<!-- ************************
+HEAD and NAVBAR SECTION
+************************* -->
      <div id="header">
 
      </div>
@@ -16,7 +19,9 @@
 
      </div>
 
-
+<!-- **************************
+SIDE-RIGHT (SIDEBAR) SECTION
+***************************-->
      <div class="side-right">
           <h2>Lecture Dates</h2>
           <p>11/07 -Lecture on Caesar</p>
@@ -26,9 +31,7 @@
           <p>12/05 -Lecture on Caesar</p>
      </div>
 
-<!-- ***************
-      SIDE-BAR NO 2
-**************** -->
+<!-- SIDE-BAR NO 2 -->
      <div class="side-right">
           <h2>Lecture Dates 2</h2>
           <p>11/07 -Lecture on Caesar</p>
@@ -40,14 +43,15 @@
 <!-- We have to place the second SIDEBAR
 under the first one but above the main content -->
 
-<!-- *****************
- IMAGE as a SIDE-BAR
-****************** -->
+<!-- IMAGE as a SIDE-BAR -->
      <div>
           <img class="image-sidebar" src="https://dl.dropbox.com/s/xjxwp9uzz4gwswz/Mobile-wall.jpg?dl=1" alt="">
           <!-- Here class is in the IMG -->
      </div>
-
+     
+<!-- *********************
+MAIN CONTENT SECTION
+********************* -->
      <div class="main">
           <h1>DragonEMPEROR: The legend</h1>
                <p>
@@ -79,5 +83,10 @@ under the first one but above the main content -->
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
      </div>
 
+     <div id="footer">
+     <!-- we are not gonna reuse the Header and Footers and Navs, so we use id.
+     We want it at the dead last, after all the main contents -->
+
+     </div>
 </body>
 </html>
