Added NAVBAR Buttons (using UL and LI)

--- a/Layouts.html
+++ b/Layouts.html
@@ -16,7 +16,11 @@ HEAD and NAVBAR SECTION
      </div>
 
      <div id="navbar">
-
+          <ul>
+               <li><a href="">HOME</a></li>
+               <li><a href="">Birth of Greece</a></li>
+               <li><a href="">Birth of Rome</a></li>
+          </ul>
      </div>
 
 <!-- **************************
@@ -48,7 +52,7 @@ under the first one but above the main content -->
           <img class="image-sidebar" src="https://dl.dropbox.com/s/xjxwp9uzz4gwswz/Mobile-wall.jpg?dl=1" alt="">
           <!-- Here class is in the IMG -->
      </div>
-     
+
 <!-- *********************
 MAIN CONTENT SECTION
 ********************* -->
