Added a Header LOGO. Giving it font-family, margin, color, etc, also vertically aligninging it

--- a/Layouts.html
+++ b/Layouts.html
@@ -12,7 +12,8 @@
 HEAD and NAVBAR SECTION
 ************************* -->
      <div id="header">
-
+          <h3>DragonsBERG</h3>
+          <!-- We used h3 because we used up h1 and h2 -->
      </div>
 
      <div id="navbar">
