Added FOOTER CONTENTS (Copyright line and some Buttons) and gave them some styles

--- a/Layouts.html
+++ b/Layouts.html
@@ -88,10 +88,21 @@ MAIN CONTENT SECTION
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
      </div>
 
+<!-- *************
+FOOTER SECTION
+**************  -->
      <div id="footer">
      <!-- we are not gonna reuse the Header and Footers and Navs, so we use id.
      We want it at the dead last, after all the main contents -->
 
+     <ul>
+          <li><a href="">About SilvenLEAF</a></li>
+          <li><a href="">Careers</a></li>
+          <li><a href="">Help</a></li>
+          <li><a href="">Contact Us</a></li>
+     </ul>
+
+     &copy; 2020 SilvenLEAF.com All rights reserved
      </div>
 </body>
 </html>
